Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77100

NUC: neptune3-ui-qsr-cluster and QWindow raster example don't render on boot2qt image with eglfs platform

XMLWordPrintable

    • Linux/Wayland
    • 53a6f7b7836ef5084106ed63f6745c20d663affa (qt/qtbase/5.12) a9b9a881344239781e5894f2dd3d0af90ffbb4ba (qt/qtbase/5.13.1)

      For 5.12.0 on pelux image neptune3-ui-qsr-cluster app (rendering part is based on Qt Raster Window Example https://doc.qt.io/qt-5/qtgui-rasterwindow-example.html) rendered OK.

      On 5.13.0 boot2qt and pelux images app starts, but no rendering happens, terminal output remains on the screens.  Warning message appears on calling flush() function on render:

      Attempted flush to non-raster surface SafeWindow(0x7fff55ab7ed0) of type QSurface::OpenGLSurface

       

      App renders correctly with linuxfb platform.

      Same for mentioned Raster Window Example

       

      Not sure whether it is a bug or not and where to place it, maybe it is more of Qt-related

        For Gerrit Dashboard: QTBUG-77100
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            e.nemtsev Egor Nemtsev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes