src/gui/kernel/qplatformintegration.h
@@ -103,7 +103,8 @@ public:
         AllGLFunctionsQueryable,
         ApplicationIcon,
         SwitchableWidgetComposition,
-        TopStackedNativeChildWindows
+        TopStackedNativeChildWindows,
+        OpenGLOnRasterSurface
     };
 
     virtual ~QPlatformIntegration() { }
